fix: issue related to spacing

--- a/src/components/core/input-field/_input-field.scss
+++ b/src/components/core/input-field/_input-field.scss
@@ -4,7 +4,7 @@
   position: relative;
   overflow: hidden;
   border: 2px solid var(--B6);
-  border-radius: 0.25em;
+  border-radius: 0.375rem;
   font-size: 0;
 
   &:hover {
